--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "build": "node index.js"
+    "build": "node index.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
